# autoresearch

./: .gitignore  README.md  auto_loop.md  pyproject.toml
.github/: copilot-instructions.md
docs/case_study/: README.md  heuristics.md  results.md
docs/research/: README.md  agency_agents.md  architecture.md  building_a_harness.md  concepts.md  frameworks.md  karpathy_autoresearch.md  orchestration.md  personas.md  pptagent_icip_cas.md  using_a_harness.md
docs/research/personas_library/: README.md  brand-guardian.md  designer.md  visual-designer.md
examples/: anti_bribery_for_procurement_partners__baseline.pptx  anti_bribery_for_procurement_partners__upgraded.pptx  data_protection__gdpr__for_partners__baseline.pptx  data_protection__gdpr__for_partners__upgraded.pptx  harness_research_overview.pptx
examples/translator_agent/: README.md  demo.py
examples/translator_agent/tests/: test_pipeline.py
examples/translator_agent/translator/: __init__.py  agents.py  cli.py  llm.py  personas_loader.py  pipeline.py
scripts/: autoresearch_analyze.py  autoresearch_iter.py  build_research_deck.py  run_case_study.py
src/autoresearch/: __init__.py  cli.py  evals.py  judge.py  llm.py  seeds.py  state.py  tracing.py
src/autoresearch/agents/: __init__.py  base.py  brand_guardian.py  designer.py  narratologist.py  personas.yaml  qa.py  researcher.py  visual_designer.py
tests/: conftest.py  test_evals.py
tests/agents/: test_personas.py  test_qa.py  test_reviewers.py
tests/graph/: test_end_to_end.py  test_pipeline.py
tests/pptx/: test_render.py  test_renderers.py
(+14 files in other folders)
