[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoresearch"
version = "0.1.0"
description = "Research on AI agent harnesses + LangGraph-based POC that generates partner compliance training PPT decks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "autoresearch" }]
dependencies = [
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "python-pptx>=1.0.0",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
autoresearch = "autoresearch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/autoresearch/cli.py" = ["B008"]      # Typer's idiomatic Option default
"src/autoresearch/seeds.py" = ["E501"]    # long content strings in scripted responses
"scripts/*.py" = ["E501"]                 # markdown templating
"tests/*.py" = ["E501", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["autoresearch"]
